Public entries supported by default

--- a/samples/jekyll-template/_config.yml
+++ b/samples/jekyll-template/_config.yml
@@ -29,4 +29,4 @@ scholar:
   bibliography: test.bib
   details_dir: ./publications/details
   details_layout: details.html
-  query: "@*[public!=no]"
+  #query: "@*[public!=no]"
