Fix some to_i issues creeping up in newer ruby

--- a/samples/jekyll-template/_config.yml
+++ b/samples/jekyll-template/_config.yml
@@ -5,7 +5,10 @@ layouts_dir: ./_layouts
 
 lsi:      false
 safe:     false
-highlighter: true
+highlighter: rouge
+
+gems:
+    - jekyll-sitemap
 
 markdown: redcarpet
 redcarpet:
