--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,21 @@
 ruby-version:
         script: ruby -v ; uname -a
 
+stages:
+    - setup-gems
+    - setup-extras
+    - make-extras
+
 setup-gems:
-        script: gem install jekyll jekyll-scholar
+        stage: setup-gems
+        script: gem install jekyll jekyll-scholar bundler
+
+setup-extras:
+        stage: setup-extras
+        script: git clone https://git.uwaterloo.ca/caesr-pub/jekyll-scholar-extras.git; cd jekyll-scholar-extras;
+
+make-extras:
+        stage: ake-extras
+        script: gem build jekyll-scholar-extras.gemspec ; gem install jekyll-scholar-extras-0.1.3.gem 
+        
+
