--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ruby-version:
         stage: ruby-version
-        script: ruby -v ; echo $HOME; uname -a
+        script: echo $HOME; 
 
 stages:
     - ruby-version
@@ -15,12 +15,12 @@ setup-gems:
 
 setup-extras:
         stage: setup-extras
-        script: git clone https://git.uwaterloo.ca/caesr-pub/jekyll-scholar-extras.git; cd jekyll-scholar-extras;
+        script: cd ~; git clone https://git.uwaterloo.ca/caesr-pub/jekyll-scholar-extras.git; cd jekyll-scholar-extras;
 
 make-extras:
         stage: make-extras
-        script: gem build jekyll-scholar-extras.gemspec ; gem install jekyll-scholar-extras-0.1.3.gem 
+        script: gem build jekyll-scholar-extras.gemspec ; gem install jekyll-scholar-extras-0.1.3.gem; cp -r samples/jekyll-template ~/; cd ~;
         
 test-extras:
         stage: test-extras
-        script: cd ~; cp -r jekyll-scholar-extras/samples/jekyll-template $HOME; cd jekyll-template; jekyll build --trace
+        script: cd ~; cd jekyll-template; jekyll build --trace
