--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ setup-extras:
 
 make-extras:
         stage: make-extras
-        script: gem build jekyll-scholar-extras.gemspec ; gem install jekyll-scholar-extras-0.1.3.gem; cp -r samples/jekyll-template ~/; cd ~;
+        script: gem build jekyll-scholar-extras.gemspec ; gem install jekyll-scholar-extras-0.1.3.gem; cp -r samples/jekyll-template ~/; cd ~; ls ~/
         
 test-extras:
         stage: test-extras
