--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,24 @@ stages:
 
 setup-gems:
         stage: setup-gems
-        script: gem install jekyll jekyll-scholar bundler
+        script: 
+                - gem install jekyll jekyll-scholar bundler
 
 setup-extras:
         stage: setup-extras
-        script: cd ~; git clone https://git.uwaterloo.ca/caesr-pub/jekyll-scholar-extras.git; cd jekyll-scholar-extras;
+        script: 
+                - cd ~; 
+                - git clone https://git.uwaterloo.ca/caesr-pub/jekyll-scholar-extras.git; 
+                - cd jekyll-scholar-extras;
 
 make-extras:
         stage: make-extras
-        script: gem build jekyll-scholar-extras.gemspec ; gem install jekyll-scholar-extras-0.1.3.gem; cp -r samples/jekyll-template ~/; cd ~; ls ~/
+        script: 
+                - gem build jekyll-scholar-extras.gemspec ; 
+                - gem install jekyll-scholar-extras-0.1.3.gem; 
+                - cp -r samples/jekyll-template ~/; 
         
 test-extras:
         stage: test-extras
-        script: cd ~; cd jekyll-template; jekyll build --trace
+        script: 
+                - cd ~/jekyll-template; jekyll build --trace
