--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ stages:
     - setup-gems
     - setup-extras
     - make-extras
-    - test-extras
 
 setup-gems:
         stage: setup-gems
@@ -27,8 +26,6 @@ make-extras:
                 - gem build jekyll-scholar-extras.gemspec ; 
                 - gem install jekyll-scholar-extras-0.1.3.gem; 
                 - cp -r samples/jekyll-template ~/; 
+                - cd ~/jekyll-template
+                - jekyll build --trace
         
-test-extras:
-        stage: test-extras
-        script: 
-                - cd ~/jekyll-template; jekyll build --trace
