--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+        VERSION: "0.1.3"
+        
 stages:
     - setup-extras
     - make-extras
@@ -22,7 +25,7 @@ make-extras:
         stage: make-extras
         script: 
                 - gem build jekyll-scholar-extras.gemspec ; 
-                - gem install jekyll-scholar-extras-0.1.3.gem; 
+                - gem install jekyll-scholar-extras-$VERSION.gem; 
                 - cp -r samples/jekyll-template ~/; 
                 - cd ~/jekyll-template
                 - jekyll build --trace
